<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_paired_devices"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:textSize="@dimen/textFontSize"
        android:paddingLeft="5dp"/>

    <ListView android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="false"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"/>

    <TextView android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_other_devices"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:textSize="@dimen/textFontSize"
        android:paddingLeft="5dp"/>

    <ListView android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="2"
    />

    <Button android:id="@+id/button_scan"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@color/colorTextIcons"
        android:drawableRight="@drawable/printer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"/>

    <ProgressBar
        android:id="@+id/pgBar"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_height="wrap_content" />

</LinearLayout>